# actstat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  QWEN.md  README.md  rustfmt.toml  sase.yml
.github/workflows/: ci.yml
memory/: README.md  sase.md
sase/: sase.yml
sase/memory/: README.md  sase.md
sdd/beads/: beads.db  config.json  issues.jsonl
sdd/beads/events/streams/: actstat-1.jsonl
sdd/epics/202606/: actstat_init_4.md
sdd/prompts/202606/: actstat_1_remaining.md  actstat_init_4.md  commit_centric_status.md  fix_ci_rustfmt.md  github_actions_ci.md  org_exclude_repos.md
sdd/prompts/202607/: active_runs.md  single_running_actions_run.md
sdd/tales/202606/: actstat_1_remaining.md  commit_centric_status.md  fix_ci_rustfmt.md  github_actions_ci.md  org_exclude_repos.md
sdd/tales/202607/: active_runs.md  single_running_actions_run.md
src/: cli.rs  config.rs  github.rs  lib.rs  main.rs  model.rs  render.rs
